--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <script src="//cdn.jsdelivr.net/npm/d3-dsv"></script>
 
   <script src="//cdn.jsdelivr.net/npm/globe.gl"></script>
-  <!--<script src="../../dist/globe.gl.js"></script>-->
+  <link type="text/css" rel="stylesheet" href="css3d_main.css">
 </head>
 
 <body>
+	<div align="center"><br/>%YES: "Over the past week, have you been continually worried or anxious about a number of events or activities in your daily life?"</div>
   <div id="globeViz"></div>
 
   <script>
@@ -28,7 +29,6 @@
       .hexBinMerge(true)
       .enablePointerInteraction(false); // performance improvement
 
-    //fetch('../datasets/world_population.csv').then(res => res.text())
     fetch('corona_data.csv').then(res => res.text())
       .then(csv => d3.csvParse(csv, ({ lat, lng, pop }) => ({ lat: +lat, lng: +lng, pop: +pop })))
       .then(data => world.hexBinPointsData(data));
